src/objects/Special_Handling_Instructions__c.object
<CustomObject>
    <description>This object is used to display Special Handling Instructions</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Special_Handling_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handling_Instructions__c</fullName>
        <description>This field will have Handling Instructions</description>
        <label>Handling Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <label>Handling Instructions</label>
    <nameField>
        <label>Special Handling Instructions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Handling Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>